--- a/Metodo de la secante.ipynb
+++ b/Metodo de la secante.ipynb
@@ -66,6 +66,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c09e0cc6",
    "metadata": {},
@@ -114,115 +115,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "6600e960",
+   "execution_count": null,
+   "id": "0c2a1d41",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def secante (f, x1, x2, tol):\n",
-    "    error= 1e3\n",
-    "    n =0\n",
+    "import pandas as pd\n",
+    "import sympy as sp\n",
+    "import numpy as np\n",
+    "import os as os\n",
+    "import matplotlib.pyplot as plt \n",
+    "\n",
+    "pd.set_option(\"display.precision\", 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "466c6e9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_file(file_name):\n",
+    "    if os.path.exists(file_name):\n",
+    "        os.remove(file_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b5ef2be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def export_table(data_frame, file_name):\n",
+    "    remove_file(f\"{file_name}.csv\")\n",
+    "    remove_file(f\"{file_name}.html\")\n",
+    "    data_frame.to_csv(f\"{file_name}.csv\")\n",
+    "    data_frame.to_html(f\"{file_name}.html\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a802fe2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_dictionary(columns):\n",
+    "    dictionary = {}\n",
+    "    for c in columns: \n",
+    "        dictionary[c] = []    \n",
+    "    return dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "574584c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols = [\"i\", \"x2\", \"x1\", \"x3\", \"Error\"]\n",
+    "dict1 = create_dictionary(cols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d652629",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_info(dictionary, columns, data):\n",
+    "    i = 0\n",
+    "    for c in columns:\n",
+    "        dictionary[c].append(data[i])\n",
+    "        i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e89d9cfb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def secante(f, x1, x2, tol):\n",
+    "    print (\"Este programa encuentra una raíz por el método de la secante \")\n",
     "    x3 = 0\n",
+    "    n = 0\n",
+    "    error = 100\n",
+    "    data = [n, x2, x1, x3, error]\n",
+    "    print('{:^10}{:^10}{:^10}{:^10}{:^10}'.format('i', 'xi', 'f(xi)', 'x3', 'error'))\n",
+    "    \n",
     "    while error > tol:\n",
-    "        x3 = x1-((x2-x1) / (f(x2) -f(x1))) *f (x1)\n",
+    "        x3 = x2 - ((x1 - x2) / (f(x1) - f(x2))) * f(x2)\n",
     "        x1 = x2\n",
     "        x2 = x3\n",
-    "        error = abs (f(x3))\n",
+    "        error = abs((x2 - x1) / x2)\n",
     "        n += 1\n",
-    "    print (\"Solucion aproximada: {:.4f} \".format(x3))\n",
-    "    print (\"Numero de iteraciones: {:d}\".format(n))"
+    "        print('{:^10}{:^10.6f}{:^10.6f}{:^10.6f}{:^10.6f}'.format(n, float(x1), float(f(x1)), float(x2), float(error)))\n",
+    "        data = [n, x2, x1, x3, error]\n",
+    "        add_info(dict1, cols, data)\n",
+    "        \n",
+    "    print(\"Solución aproximada :\", x3)\n",
+    "    print(\"Número de iteraciones:\", n)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "1f0776b9",
+   "execution_count": null,
+   "id": "3742fdad",
    "metadata": {},
    "outputs": [],
    "source": [
-    "f=lambda x:x**2-10"
+    "f = lambda x: x**2 - 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "ab793522",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Solucion aproximada: 3.1623 \n",
-      "Numero de iteraciones: 7\n"
-     ]
-    }
-   ],
-   "source": [
-    "secante(f,11,10,1e-7)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "f14b04fc",
+   "execution_count": null,
+   "id": "61d8b805",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def secante (f, x1, x2, tol):\n",
-    "    print (\"este programa encuentra una raiz por el metodo de la secante \")\n",
-    "    x3=0\n",
-    "    n=0\n",
-    "    error=100\n",
-    "    print('{:^10}{:^10}{:^10}{:^10}{:^10}'.format('i','xi','f(xi)','x+1','error'))\n",
-    "    while(error) > tol :\n",
-    "        x3 = x1-((x2-x1) / (f(x2) -f(x1))) *f (x1)\n",
-    "        x1 = x2\n",
-    "        x2 = x3\n",
-    "        error = abs (f(x3))\n",
-    "        n += 1\n",
-    "        print('{:^10}{:^10.6f}{:^10.6f}{:^10.6f}{:^10.6f}'.format(n,float(x1),float(f(x1)), float(x2),float(error)))\n",
-    "    print(\"solucion aproximada :\", x3)\n",
-    "    print (\"Numero de iteraciones: {:d}\".format(n))\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "5051345f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f=lambda x:x**2-10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "6fa7d85c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "este programa encuentra una raiz por el metodo de la secante \n",
-      "    i         xi      f(xi)      x+1      error   \n",
-      "    1     10.000000 90.000000  5.714286 22.653061 \n",
-      "    2      5.714286 22.653061  4.272727  8.256198 \n",
-      "    3      4.272727  8.256198  3.446034  1.875149 \n",
-      "    4      3.446034  1.875149  3.203100  0.259849 \n",
-      "    5      3.203100  0.259849  3.164020  0.011021 \n",
-      "    6      3.164020  0.011021  3.162289  0.000071 \n",
-      "    7      3.162289  0.000071  3.162278  0.000000 \n",
-      "solucion aproximada : 3.1622776632441694\n",
-      "Numero de iteraciones: 7\n"
-     ]
-    }
-   ],
-   "source": [
-    "secante(f,11,10,1e-7)"
+    "secante(f, 10, 11, 1e-7)\n",
+    "\n",
+    "x = np.arange(0, 15)\n",
+    "y = f(x)\n",
+    "\n",
+    "plt.plot(x, y, 'r');\n",
+    "plt.grid()\n",
+    "plt.axhline(0, color='black')\n",
+    "plt.axvline(0, color='black')\n",
+    "plt.show()"
    ]
   },
   {
